<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardBackgroundColor"
    app:layoutDescription="@xml/fragment_overview_scene"
    tools:context=".ui.fragment.overview.OverviewFragment">


    <ImageView
        android:id="@+id/main_imageview"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/gradient_overly"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/gradient_overly"
        app:layout_constraintBottom_toBottomOf="@+id/main_imageview"
        app:layout_constraintEnd_toEndOf="@+id/main_imageview"
        app:layout_constraintStart_toStartOf="@+id/main_imageview"
        app:layout_constraintTop_toTopOf="@+id/main_imageview"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="24dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/main_imageview"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/time_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_access_time_24"
        app:layout_constraintBottom_toTopOf="@+id/time_textView"
        app:layout_constraintEnd_toEndOf="@+id/time_textView"
        app:layout_constraintStart_toStartOf="@+id/time_textView"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/likes_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/time_textView"
        app:layout_constraintEnd_toStartOf="@+id/time_textView"
        app:layout_constraintTop_toTopOf="@+id/time_textView" />

    <ImageView
        android:id="@+id/likes_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hearth"
        app:layout_constraintBottom_toTopOf="@+id/likes_textview"
        app:layout_constraintEnd_toEndOf="@+id/likes_textview"
        app:layout_constraintStart_toStartOf="@+id/likes_textview"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/favorite_title_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/courgette"
        android:text="Title"
        android:textColor="@color/titleColor"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_imageview" />

    <ImageView
        android:id="@+id/vegetarian_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@+id/favorite_title_textView"
        app:layout_constraintTop_toBottomOf="@+id/favorite_title_textView"
        app:tint="@color/titleColor" />

    <TextView
        android:id="@+id/vegetarian_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegetarian"
        android:textColor="@color/titleColor"
        app:layout_constraintBottom_toBottomOf="@+id/vegetarian_imageView"
        app:layout_constraintStart_toEndOf="@+id/vegetarian_imageView"
        app:layout_constraintTop_toTopOf="@+id/vegetarian_imageView" />

    <ImageView
        android:id="@+id/vegan_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@+id/vegetarian_imageView"
        app:layout_constraintTop_toBottomOf="@+id/vegetarian_imageView"
        app:tint="@color/titleColor" />

    <TextView
        android:id="@+id/vegan_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegan"
        android:textColor="@color/titleColor"
        app:layout_constraintBottom_toBottomOf="@+id/vegan_imageView"
        app:layout_constraintStart_toEndOf="@+id/vegan_imageView"
        app:layout_constraintTop_toTopOf="@+id/vegan_imageView" />

    <ImageView
        android:id="@+id/glutenfree_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintBottom_toBottomOf="@+id/vegetarian_textView"
        app:layout_constraintStart_toEndOf="@+id/vegetarian_textView"
        app:layout_constraintTop_toTopOf="@+id/vegetarian_textView"
        app:tint="@color/titleColor" />

    <TextView
        android:id="@+id/glutenfree_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gluten_free"
        android:textColor="@color/titleColor"
        app:layout_constraintBottom_toBottomOf="@+id/glutenfree_imageView"
        app:layout_constraintStart_toEndOf="@+id/glutenfree_imageView"
        app:layout_constraintTop_toTopOf="@+id/glutenfree_imageView" />

    <ImageView
        android:id="@+id/dairy_free_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintBottom_toBottomOf="@+id/vegan_textView"
        app:layout_constraintStart_toStartOf="@+id/glutenfree_imageView"
        app:layout_constraintTop_toTopOf="@+id/vegan_textView"
        app:tint="@color/titleColor" />

    <TextView
        android:id="@+id/dairy_free_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/dairy_free"
        android:textColor="@color/titleColor"
        app:layout_constraintBottom_toBottomOf="@+id/dairy_free_imageView"
        app:layout_constraintStart_toEndOf="@+id/dairy_free_imageView"
        app:layout_constraintTop_toTopOf="@+id/dairy_free_imageView" />

    <ImageView
        android:id="@+id/healthy_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintBottom_toBottomOf="@+id/glutenfree_textView"
        app:layout_constraintStart_toEndOf="@+id/glutenfree_textView"
        app:layout_constraintTop_toTopOf="@+id/glutenfree_textView"
        app:tint="@color/titleColor" />

    <TextView
        android:id="@+id/healthy_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/healthy"
        android:textColor="@color/titleColor"
        app:layout_constraintBottom_toBottomOf="@+id/healthy_imageView"
        app:layout_constraintStart_toEndOf="@+id/healthy_imageView"
        app:layout_constraintTop_toTopOf="@+id/healthy_imageView" />

    <ImageView
        android:id="@+id/cheap_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintBottom_toBottomOf="@+id/dairy_free_textView"
        app:layout_constraintStart_toStartOf="@+id/healthy_imageView"
        app:layout_constraintTop_toTopOf="@+id/dairy_free_textView"
        app:tint="@color/titleColor" />

    <TextView
        android:id="@+id/cheap_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cheap"
        android:textColor="@color/titleColor"
        app:layout_constraintBottom_toBottomOf="@+id/cheap_imageView"
        app:layout_constraintStart_toEndOf="@+id/cheap_imageView"
        app:layout_constraintTop_toTopOf="@+id/cheap_imageView" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegan_imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/summery_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.motion.widget.MotionLayout>